--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
             <p class="lead">This is a simple scraper from 'The Guardian' Tech site</p>
             <hr class="my-4">
             <p>It stores the news from the site and stores them in Mongo.</p>
+            <p>Click the button to scrape</p>
+            <a class="btn btn-info btn-sm btn-block" id="scrape" href="#" role="button">Scrape!</a>
         </div>
         <div id="articles">
             <!-- SECTION TO ADD ARTICLES DINAMICALLY -->
@@ -32,7 +34,7 @@
             </button>
             </div>
             <div class="modal-body">
-                <!-- TODO: Append content -->
+                <!-- SECTOPM TO APPEND COMMENTS -->
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
